--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ description = "Sample project with cz bump"
 [tool.commitizen]
 name = "cz_conventional_commits"
 version = "0.5.0"
-tag_format = "v{version}"
+tag_format = "v$version"
 version_files = ["pyproject.toml"]
 update_changelog_on_bump = true
 
