build(requirements.txt): cleaning

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 FIREFLY_URL=https://firefly.local
 FIREFLY_TOKEN=changeme
 QXLSESSID=allegro_cookie
-TAG=allegro
+TAG=allegro_done
 DESCRIPTION_FILTER=allegro
